--- a/app/views/entries/show.html.erb
+++ b/app/views/entries/show.html.erb
@@ -39,213 +39,27 @@
 </div>
 <!--/Tab Section-->
 
+<li class="game-status-template game-status" style="display:none;">
+    <table class="status ">
+      <tbody>
+      <tr class="white">
+        <td class="home-team-alias">UTA</td>
+        <td class="home-team-score">86</td>
+      </tr>
+      <tr>
+        <td class="away-team-alias">ORL</td>
+        <td class="away-team-score">82</td>
+      </tr>
+      <tr>
+        <td colspan="2"><span class="game-state-text">FINAL</span></td>
+      </tr>
+      </tbody>
+    </table>
+</li>
 <div class="clearfix">&nbsp;</div>
 <!--Status Table-->
 <ul class="list-inline freeroll_status">
-  <li>
-    <table class="status">
-      <tbody>
-      <tr class="white">
-        <td>UTA</td>
-        <td>86</td>
-      </tr>
-      <tr>
-        <td>ORL</td>
-        <td>82</td>
-      </tr>
-      <tr>
-        <td colspan="2"><span>FINAL</span></td>
-      </tr>
-      </tbody>
-    </table>
-  </li>
-  <li>
-    <table class="status">
-      <tbody>
-      <tr class="white">
-        <td>UTA</td>
-        <td>86</td>
-      </tr>
-      <tr>
-        <td>ORL</td>
-        <td>82</td>
-      </tr>
-      <tr>
-        <td colspan="2"><span>FINAL</span></td>
-      </tr>
-      </tbody>
-    </table>
-  </li>
-  <li>
-    <table class="status">
-      <tbody>
-      <tr class="white">
-        <td>UTA</td>
-        <td>86</td>
-      </tr>
-      <tr>
-        <td>ORL</td>
-        <td>82</td>
-      </tr>
-      <tr>
-        <td colspan="2"><span>FINAL</span></td>
-      </tr>
-      </tbody>
-    </table>
-  </li>
-  <li>
-    <table class="status">
-      <tbody>
-      <tr class="white">
-        <td>UTA</td>
-        <td>86</td>
-      </tr>
-      <tr>
-        <td>ORL</td>
-        <td>82</td>
-      </tr>
-      <tr>
-        <td colspan="2"><span>FINAL</span></td>
-      </tr>
-      </tbody>
-    </table>
-  </li>
-  <li>
-    <table class="status">
-      <tbody>
-      <tr class="white">
-        <td>UTA</td>
-        <td>86</td>
-      </tr>
-      <tr>
-        <td>ORL</td>
-        <td>82</td>
-      </tr>
-      <tr>
-        <td colspan="2"><span>FINAL</span></td>
-      </tr>
-      </tbody>
-    </table>
-  </li>
-  <li>
-    <table class="status">
-      <tbody>
-      <tr class="white">
-        <td>UTA</td>
-        <td>86</td>
-      </tr>
-      <tr>
-        <td>ORL</td>
-        <td>82</td>
-      </tr>
-      <tr>
-        <td colspan="2"><span>FINAL</span></td>
-      </tr>
-      </tbody>
-    </table>
-  </li>
-  <li>
-    <table class="status">
-      <tbody>
-      <tr class="white">
-        <td>UTA</td>
-        <td>86</td>
-      </tr>
-      <tr>
-        <td>ORL</td>
-        <td>82</td>
-      </tr>
-      <tr>
-        <td colspan="2"><span>FINAL</span></td>
-      </tr>
-      </tbody>
-    </table>
-  </li>
-  <li>
-    <table class="status">
-      <tbody>
-      <tr class="white">
-        <td>UTA</td>
-        <td>86</td>
-      </tr>
-      <tr>
-        <td>ORL</td>
-        <td>82</td>
-      </tr>
-      <tr>
-        <td colspan="2"><span>FINAL</span></td>
-      </tr>
-      </tbody>
-    </table>
-  </li>
-  <li>
-    <table class="status">
-      <tbody>
-      <tr class="white">
-        <td>UTA</td>
-        <td>86</td>
-      </tr>
-      <tr>
-        <td>ORL</td>
-        <td>82</td>
-      </tr>
-      <tr>
-        <td colspan="2"><span>FINAL</span></td>
-      </tr>
-      </tbody>
-    </table>
-  </li>
-  <li>
-    <table class="status">
-      <tbody>
-      <tr class="white">
-        <td>UTA</td>
-        <td>86</td>
-      </tr>
-      <tr>
-        <td>ORL</td>
-        <td>82</td>
-      </tr>
-      <tr>
-        <td colspan="2"><span>FINAL</span></td>
-      </tr>
-      </tbody>
-    </table>
-  </li>
-  <li>
-    <table class="status">
-      <tbody>
-      <tr class="white">
-        <td>UTA</td>
-        <td>86</td>
-      </tr>
-      <tr>
-        <td>ORL</td>
-        <td>82</td>
-      </tr>
-      <tr>
-        <td colspan="2"><span>FINAL</span></td>
-      </tr>
-      </tbody>
-    </table>
-  </li>
-  <li>
-    <table class="status">
-      <tbody>
-      <tr class="white">
-        <td>UTA</td>
-        <td>86</td>
-      </tr>
-      <tr>
-        <td>ORL</td>
-        <td>82</td>
-      </tr>
-      <tr>
-        <td colspan="2"><span>FINAL</span></td>
-      </tr>
-      </tbody>
-    </table>
-  </li>
+  <!-- row of relevant games with realtime state, filled in via Javascript -->
 </ul>
 
 <!--/.Status Table-->
