--- a/app/views/entries/_lineup_row_template.html.erb
+++ b/app/views/entries/_lineup_row_template.html.erb
@@ -5,11 +5,13 @@
     <td><h1 class="role">XX</h1></td>
     <td><strong class="player-name">First Last</strong>
 
-      <p class="por">
-        <strong>POR</strong> 109 @ <strong>MIN</strong> 120 FINAL<br>
-                  <span class="records">
-                    99 P, 0 R, 0 A, 0 S, 0 B, 0 T
-                  </span>
+      <p class="player-score">
+        <strong>POR</strong> 109 @ <strong>MIN</strong> 120 FINAL
+      </p>
+      <p class="player-record-row">
+          <span class="player-record">
+            99 P, 0 R, 0 A, 0 S, 0 B, 0 T
+          </span>
       </p>
     </td>
     <td>
