--- a/app/views/entries/show.html.erb
+++ b/app/views/entries/show.html.erb
@@ -251,27 +251,29 @@
 <!--/.Status Table-->
 
 <!--List Area-->
-<table class="freeroll table-responsive">
+<table class="freeroll table-responsive js-gamecenter">
+  <thead>
+      <tr>
+        <th>POS</th>
+        <th>&nbsp;</th>
+        <th>USER</th>
+        <th>QUARTERS REMAINING</th>
+        <th class="js-sort-score desc" data-direction="desc">SCORE <span class="direction">&#x25BC;</span></th>
+        <th>PRIZES</th>
+      </tr>
+  </thead>
   <tbody>
-  <tr>
-    <th>POS</th>
-    <th>&nbsp;</th>
-    <th>USER</th>
-    <th>QUARTERS REMAINING</th>
-    <th>SCORE</th>
-    <th>PRIZES</th>
-  </tr>
-  <% @entries.each do |entry| %>
+  <% @entries.each_with_index do |entry, index| %>
   <tr data-entry-id="<%= entry.id %>">
-    <td>1</td>
-    <td><%= image_tag "user.png", class: "user"%></td>
-    <td><span class="green"><%= entry.lineup.user.username %></span></td>
-    <td>5
+    <td class="position"><%= index + 1 %></td>
+    <td class="img"><%= image_tag "user.png", class: "user"%></td>
+    <td class="name"><span class="green"><%= entry.lineup.user.username %></span></td>
+    <td class="quarters">5
       <progress value="10" max="100"></progress>
     </td>
     <td class="fantasypoints"><%= entry.current_fantasypoints %></td>
     <!--<td>$300K NFL Bomb Entry</td>-->
-    <td><%= number_to_currency(@contest.prize, unit: '$') %> <%= @contest.sport %> <%= @contest.contest_type %></td>
+    <td class="prizes"><%= number_to_currency(@contest.prize, unit: '$') %> <%= @contest.sport %> <%= @contest.contest_type %></td>
   </tr>
   <% end %>
 
