--- a/app/views/entries/_inner_scorecard.html.erb
+++ b/app/views/entries/_inner_scorecard.html.erb
@@ -6,8 +6,8 @@
   <p class="user"><%= image_tag "user.png" %> <span class="green username"></span></p>
 
   <div class="clearfix"></div>
-  <p class="quarters"> 6 Quarters Remaining
-    <progress value="20" max="100"></progress>
+  <p><span class="entry-min-remaining"></span> Minutes Remaining
+  <p><progress class="entry-progress-bar" value="0" max="48"></progress>
   </p>
 </div>
 <div class="col-md-2 panelThree"><strong class="panelStrong">SCORE</strong>
