--- a/app/views/entries/show.html.erb
+++ b/app/views/entries/show.html.erb
@@ -71,7 +71,7 @@
     <th>POS</th>
     <th>&nbsp;</th>
     <th>USER</th>
-    <th>QUARTERS REMAINING</th>
+    <th>MINUTES REMAINING</th>
     <th>SCORE</th>
     <th>PRIZES</th>
   </tr>
@@ -80,8 +80,8 @@
     <td>1</td>
     <td><%= image_tag "user.png", class: "user"%></td>
     <td><span class="green"><%= entry.lineup.user.username %></span></td>
-    <td>5
-      <progress value="10" max="100"></progress>
+    <td><span class="entry-min-remaining"></span>
+      <progress class="entry-progress-bar" value="0" max="48"></progress>
     </td>
     <td class="fantasypoints"><%= entry.current_fantasypoints %></td>
     <!--<td>$300K NFL Bomb Entry</td>-->
