Adjustements for the lineups table. Few significant adjustments had to be made, as the thead of the table cannot become easily separete from the tbody in terms of the layout. I suggest reworking the sorting mechanism to jQuery plugin called tsort, bootstrap is not flexible enough for this kind of layout.

--- a/app/assets/stylesheets/entries.css.scss
+++ b/app/assets/stylesheets/entries.css.scss
@@ -149,6 +149,10 @@
   }
 }
 
+table.no-margin-bottom {
+  margin-bottom: 0px;
+}
+
 table.tab {
   font-family: 'droid_sansregular';
   width: 100%;
