--- a/app/views/entries/show.html.erb
+++ b/app/views/entries/show.html.erb
@@ -15,7 +15,7 @@
   <!--<li><span>10x $300k nfl bomb entries</span></li>-->
   <li><span><%= number_to_currency(@contest.prize, unit: '$') %> <%= @contest.sport %> <%= @contest.contest_type %></span></li>
   <li><a id="is_contest_live_text" href="#"><%=  @contest.live? ?  'LIVE IN PLAY' :  'not live' %></a></li>
-  <li><span>Started <%= time_ago_in_words(@contest.contest_start) + " ago" %></span></li>
+  <li><span>Started <%= @contest.contestdate %></span></li>
   <!--<li><span>Started 7:00pm ET 12/18</span></li>-->
 </ul>
 <div class="clearfix"></div>
@@ -26,7 +26,7 @@
       <h4><strong>Multiplayer League</strong></h4>
     </li>
     <li>
-      <h4><%= @entries.count %> Entries</h4>
+      <h4> @entries.count Entries</h4>
     </li>
     <li>
 
@@ -39,55 +39,44 @@
 </div>
 <!--/Tab Section-->
 
-<li class="game-status-template game-status" style="display:none;">
-    <table class="status ">
-      <tbody>
-      <tr class="white">
-        <td class="home-team-alias">UTA</td>
-        <td class="home-team-score">86</td>
-      </tr>
-      <tr>
-        <td class="away-team-alias">ORL</td>
-        <td class="away-team-score">82</td>
-      </tr>
-      <tr>
-        <td colspan="2"><span class="game-state-text">FINAL</span></td>
-      </tr>
-      </tbody>
-    </table>
-</li>
+
 <div class="clearfix">&nbsp;</div>
 <!--Status Table-->
-<ul class="list-inline freeroll_status">
-  <!-- row of relevant games with realtime state, filled in via Javascript -->
+
+<!-- this element owned by backbone GamesView -->
+<ul class="list-inline freeroll_status" id="gamesview_el">
+  <!-- row of relevant games with realtime state, filled in via backbone -->
 </ul>
 
 <!--/.Status Table-->
 
 <!--List Area-->
 <table class="freeroll table-responsive">
-  <tbody>
-  <tr>
-    <th>POS</th>
-    <th>&nbsp;</th>
-    <th>USER</th>
-    <th>MINUTES REMAINING</th>
-    <th>SCORE</th>
-    <th>PRIZES</th>
-  </tr>
-  <% @entries.each do |entry| %>
-  <tr data-entry-id="<%= entry.id %>">
-    <td>1</td>
-    <td><%= image_tag "user.png", class: "user"%></td>
-    <td><span class="green"><%= entry.lineup.user.username %></span></td>
-    <td><span class="entry-min-remaining"></span>
-      <progress class="entry-progress-bar" value="0" max="48"></progress>
-    </td>
-    <td class="fantasypoints"><%= entry.current_fantasypoints %></td>
-    <!--<td>$300K NFL Bomb Entry</td>-->
-    <td><%= number_to_currency(@contest.prize, unit: '$') %> <%= @contest.sport %> <%= @contest.contest_type %></td>
-  </tr>
-  <% end %>
+  <thead>
+      <tr>
+        <th>POS</th>
+        <th>&nbsp;</th>
+        <th>USER</th>
+        <th>MINUTES REMAINING</th>
+        <th>SCORE</th>
+        <th>PRIZES</th>
+      </tr>
+
+  </thead>
+  <tbody id="entry-summarys-view-el">
+  <!-- @entries.each do |entry| -->
+  <!--<tr data-entry-id=" entry.id ">-->
+    <!--<td>1</td>-->
+    <!--<td><%= image_tag "user.png", class: "user"%></td>-->
+    <!--<td><span class="green">entry.lineup.user.username </span></td>-->
+    <!--<td><span class="entry-min-remaining"></span>-->
+      <!--<progress class="entry-progress-bar" value="0" max="48"></progress>-->
+    <!--</td>-->
+    <!--<td class="fantasypoints">entry.current_fantasypoints </td>-->
+    <!--&lt;!&ndash;<td>$300K NFL Bomb Entry</td>&ndash;&gt;-->
+    <!--<td><%= number_to_currency(@contest.prize, unit: '$') %> <%= @contest.sport %> <%= @contest.contest_type %></td>-->
+  <!--</tr>-->
+  <!-- end -->
 
   </tbody>
 </table>
@@ -98,11 +87,134 @@
 
 <%= render partial: 'lineup_row_template' %>
 
-<div class="col-md-5 scorecard pull-left" data-entry-id="<%= @entry.id %>">
-    <%= render partial: 'inner_scorecard' %>
+<div id="my-scorecard" class="col-md-5 scorecard pull-left" data-entry-id="<%= @entry.id %>">
+    <%= #render partial: 'inner_scorecard'
+    %>
 </div>
 <div id="competitor-scorecard" class="col-md-5 scorecard pull-right" data-entry-id="">
-  <%= render partial: 'inner_scorecard' %>
+  <%= #render partial: 'inner_scorecard'
+  %>
 </div>
 
+  <script>
+      // populate games list from servers.
+      var games_coll = new Main.Collections.GamesCollection;
+      games_coll.reset(<%= @games.to_json.html_safe %>);
+      var teams_coll = new Backbone.Collection;
+      teams_coll.reset(<%= @teams.to_json.html_safe %>);
+      var players_coll = new Main.Collections.PlayersCollection;
+      players_coll.reset(<%= @players.to_json.html_safe %>);
+
+      var entrysummarys_coll = new Main.Collections.EntrySummarysCollection;
+      entrysummarys_coll.reset(<%= @entrysummarys.to_json.html_safe %>);
+
+      var sportpositions_coll = new Backbone.Collection;
+      sportpositions_coll.reset (<%= @sportpositions.to_json.html_safe %>)
+
+      var playerscores_coll = new Main.Collections.PlayerScoresCollection;
+      playerscores_coll.reset (<%= @playerscores.to_json.html_safe %>)
+
+      var contest = new Backbone.Model (<%= @contest.to_json.html_safe %>)
+  </script>
 </div>
+<!-- backbone template -->
+<script type="text/template" id="games-template">
+  <%% _.each(games, function (game) { %>
+    <li class="game-status-template game-status">
+        <table class="status ">
+          <tbody>
+          <tr class="white">
+            <td class="home-team-alias"><%%= game.home_team_alias() %></td>
+            <td class="home-team-score"><%%= game.get('home_team_score') %></td>
+          </tr>
+          <tr>
+            <td class="away-team-alias"><%%= game.away_team_alias() %></td>
+            <td class="away-team-score"><%%= game.get('away_team_score') %></td>
+          </tr>
+          <tr>
+            <td colspan="2"><span class="game-state-text"><%%= game.get('pretty_play_state') %></span></td>
+          </tr>
+          </tbody>
+        </table>
+    </li>
+  <%% }); %>
+</script>
+
+<script type="text/template" id="entry-template">
+    <div class="col-md-2 panelOne"><strong class="panelStrong">POS</strong>
+
+      <h2 class="panelHeading">1</h2>
+    </div>
+    <div class="col-md-8 panelTwo">
+      <p class="user"><%= image_tag "user.png" %> <span class="green username"><%%= entry.get('username') %></span></p>
+
+      <div class="clearfix"></div>
+      <p><span class="entry-min-remaining"><%%= entry.min_left() %></span> Minutes Remaining
+      <p><progress class="entry-progress-bar" value="<%%= entry.min_left() %>" max="480"></progress>
+      </p>
+    </div>
+    <div class="col-md-2 panelThree"><strong class="panelStrong">SCORE</strong>
+
+      <h2 class="panelHeading total-score"><%%= entry.get('fps') %></h2>
+    </div>
+    <div class="clearfix"></div>
+    <!--Score Card-->
+    <div class="mylineup-spots">
+      <div class="scorecard2">
+        <table class="scorecardTable" cellpadding="10" cellspacing="10">
+          <tbody>
+            <%% $.each(players, function (idx, player) { %>
+                <tr class="">
+                    <td><h1 class="role"><%%= player.sportposition() %></h1></td>
+                    <td><strong class="player-name"> <%%= player.name() %> </strong>
+
+                      <p class="player-score">
+                        <%%= player.scorestring() %>
+                        <!--<strong>POR</strong> 109 @ <strong>MIN</strong> 120 FINAL-->
+                      </p>
+                      <p class="player-record-row">
+                                  <span class="player-record">
+                                    <!--99 P, 0 R, 0 A, 0 S, 0 B, 0 T--> blank 0 P, 0R, ...
+                                  </span>
+                      </p>
+                    </td>
+                    <td>
+                      $<span class="salary"><%%= player.get('salary') %></span> <br>
+                      SALARY
+                    </td>
+                    <td>27.5% <br>
+                      OWNED
+                    </td>
+                    <td><h1 class="score">57.2</h1></td>
+                </tr>
+            <%% }); %>
+          </tbody>
+        </table>
+      </div>
+    </div>
+
+</script>
+
+<script type="text/template" id="dead-template">
+
+
+      <tr class="lineup-row-template">
+
+      </tr>
+</script>
+
+
+<script type="text/template" id="entry-summary-template">
+    <tr>
+    <td>1</td>
+    <td><%= image_tag "user.png", class: "user"%></td>
+    <td><span class="green">USERNAME</span></td>
+    <td><span class="entry-min-remaining">MIN REMAINING</span>
+    <progress class="entry-progress-bar" value="0" max="48"></progress>
+    </td>
+    <td class="fantasypoints">0</td>
+    <!--<td>$300K NFL Bomb Entry</td>-->
+    <td>CONTEST NAME</td>
+    <!--<td><%= number_to_currency(@contest.prize, unit: '$') %> <%= @contest.sport %> <%= @contest.contest_type %></td>-->
+    </tr>
+</script>
