--- a/app/views/entries/index.html.erb
+++ b/app/views/entries/index.html.erb
@@ -87,7 +87,7 @@
           <td><%%= contest.id %></td>
           <td><%%= contest.sport %></td>
           <td data-start-at="<%%= contest.start_at %>"><%%= contest.render.start_at %></td>
-          <td data-end-at="<%%= contest.end_at %>" class="js-time-count"><%%= contest.render.end_at %></td>
+          <td data-time="<%%= contest.end_at %>" class="js-time-count"><%%= contest.render.end_at %></td>
           <td><%%= contest.entry_fee %></td>
           <td><%%= contest.prize %></td>
           <td><%%= contest.place %></td>
@@ -121,7 +121,7 @@
         <tr class="completedcontest">
           <td><%%= contest.id %></td>
           <td><%%= contest.sport %></td>
-          <td class="js-time-count"><%%= contest.render.start_at %></td>
+          <td data-time="<%%= contest.end_at %>"  class="js-time-count"><%%= contest.render.end_at %></td>
           <td><%%= contest.entry_fee %></td>
           <td><%%= contest.prize %></td>
           <td><%%= contest.entry_size %></td>
