--- a/app/views/entries/show.html.erb
+++ b/app/views/entries/show.html.erb
@@ -1,3 +1,8 @@
+<!-- load backbone templates -->
+<%= Rails.application.assets.find_asset('backbone/templates/entry-template.html').to_s.html_safe %>
+<%= Rails.application.assets.find_asset('backbone/templates/games-template.html').to_s.html_safe %>
+<%= Rails.application.assets.find_asset('backbone/templates/entry-summary-template.html').to_s.html_safe %>
+
 <div data-entry_id="<%= @entry_id %>" data-contest_id="<%= @entry.contest.id %>"
             class="capitalcontent gamecenter">
 <!--Login Section-->
@@ -96,125 +101,24 @@
   %>
 </div>
 
-  <script>
+  <script type="text/javascript">
       // populate games list from servers.
+      // temporary hack until we handle user images.
+      var user_img_placeholder = "<%= image_path("user.png") %>";
+
       var games_coll = new Main.Collections.GamesCollection;
       games_coll.reset(<%= @games.to_json.html_safe %>);
       var teams_coll = new Backbone.Collection;
       teams_coll.reset(<%= @teams.to_json.html_safe %>);
       var players_coll = new Main.Collections.PlayersCollection;
       players_coll.reset(<%= @players.to_json.html_safe %>);
-
       var entrysummarys_coll = new Main.Collections.EntrySummarysCollection;
       entrysummarys_coll.reset(<%= @entrysummarys.to_json.html_safe %>);
-
       var sportpositions_coll = new Backbone.Collection;
-      sportpositions_coll.reset (<%= @sportpositions.to_json.html_safe %>)
-
+      sportpositions_coll.reset (<%= @sportpositions.to_json.html_safe %>);
       var playerscores_coll = new Main.Collections.PlayerScoresCollection;
-      playerscores_coll.reset (<%= @playerscores.to_json.html_safe %>)
+      playerscores_coll.reset (<%= @playerscores.to_json.html_safe %>);
+      var contest = new Backbone.Model (<%= @contest.to_json.html_safe %>);
 
-      var contest = new Backbone.Model (<%= @contest.to_json.html_safe %>)
   </script>
 </div>
-<!-- backbone template -->
-<script type="text/template" id="games-template">
-  <%% _.each(games, function (game) { %>
-    <li class="game-status-template game-status">
-        <table class="status ">
-          <tbody>
-          <tr class="white">
-            <td class="home-team-alias"><%%= game.home_team_alias() %></td>
-            <td class="home-team-score"><%%= game.get('home_team_score') %></td>
-          </tr>
-          <tr>
-            <td class="away-team-alias"><%%= game.away_team_alias() %></td>
-            <td class="away-team-score"><%%= game.get('away_team_score') %></td>
-          </tr>
-          <tr>
-            <td colspan="2"><span class="game-state-text"><%%= game.get('pretty_play_state') %></span></td>
-          </tr>
-          </tbody>
-        </table>
-    </li>
-  <%% }); %>
-</script>
-
-<script type="text/template" id="entry-template">
-    <div class="col-md-2 panelOne"><strong class="panelStrong">POS</strong>
-
-      <h2 class="panelHeading">1</h2>
-    </div>
-    <div class="col-md-8 panelTwo">
-      <p class="user"><%= image_tag "user.png" %> <span class="green username"><%%= entry.get('username') %></span></p>
-
-      <div class="clearfix"></div>
-      <p><span class="entry-min-remaining"><%%= entry.min_left() %></span> Minutes Remaining
-      <p><progress class="entry-progress-bar" value="<%%= entry.min_left() %>" max="480"></progress>
-      </p>
-    </div>
-    <div class="col-md-2 panelThree"><strong class="panelStrong">SCORE</strong>
-
-      <h2 class="panelHeading total-score"><%%= entry.get('fps') %></h2>
-    </div>
-    <div class="clearfix"></div>
-    <!--Score Card-->
-    <div class="mylineup-spots">
-      <div class="scorecard2">
-        <table class="scorecardTable" cellpadding="10" cellspacing="10">
-          <tbody>
-            <%% $.each(players, function (idx, player) { %>
-                <tr class="">
-                    <td><h1 class="role"><%%= player.sportposition() %></h1></td>
-                    <td><strong class="player-name"> <%%= player.name() %> </strong>
-
-                      <p class="player-score">
-                        <%%= player.scorestring() %>
-                        <!--<strong>POR</strong> 109 @ <strong>MIN</strong> 120 FINAL-->
-                      </p>
-                      <p class="player-record-row">
-                                  <span class="player-record">
-                                    <!--99 P, 0 R, 0 A, 0 S, 0 B, 0 T--> blank 0 P, 0R, ...
-                                  </span>
-                      </p>
-                    </td>
-                    <td>
-                      $<span class="salary"><%%= player.get('salary') %></span> <br>
-                      SALARY
-                    </td>
-                    <td>27.5% <br>
-                      OWNED
-                    </td>
-                    <td><h1 class="score">57.2</h1></td>
-                </tr>
-            <%% }); %>
-          </tbody>
-        </table>
-      </div>
-    </div>
-
-</script>
-
-<script type="text/template" id="dead-template">
-
-
-      <tr class="lineup-row-template">
-
-      </tr>
-</script>
-
-
-<script type="text/template" id="entry-summary-template">
-    <tr>
-    <td>1</td>
-    <td><%= image_tag "user.png", class: "user"%></td>
-    <td><span class="green">USERNAME</span></td>
-    <td><span class="entry-min-remaining">MIN REMAINING</span>
-    <progress class="entry-progress-bar" value="0" max="48"></progress>
-    </td>
-    <td class="fantasypoints">0</td>
-    <!--<td>$300K NFL Bomb Entry</td>-->
-    <td>CONTEST NAME</td>
-    <!--<td><%= number_to_currency(@contest.prize, unit: '$') %> <%= @contest.sport %> <%= @contest.contest_type %></td>-->
-    </tr>
-</script>
